bisa add dengan mongo

--- a/client/main.html
+++ b/client/main.html
@@ -12,7 +12,13 @@
       <!-- navbar -->
     </header>
     <!-- header -->
-
+    <div class="row">
+        <div class="col-sm-12">
+          <form class="new-post">
+              <input type="text" name="title" />
+          </form>
+        </div>
+    </div>
     <div id="main" class="row-fluid">
       {{> postsList}}
     </div>
