--- a/client/main.html
+++ b/client/main.html
@@ -12,13 +12,7 @@
       <!-- navbar -->
     </header>
     <!-- header -->
-    <div class="row">
-        <div class="col-sm-12">
-          <form class="new-post">
-              <input type="text" name="title" />
-          </form>
-        </div>
-    </div>
+    {{> formAdd}}
     <div id="main" class="row-fluid">
       {{> postsList}}
     </div>
